refactor: 命令行调用优化